--- a/style.css
+++ b/style.css
@@ -105,16 +105,21 @@ nav#toolbox button#lineMode {
 }
 
 nav#toolbox button#CircleCenterMode {
-	background-position: -38px center;
+	background-position: -36px center;
 }
 
 nav#toolbox button#CircleEdgeMode {
-	background-position:-78px center;
+	background-position:-73px center;
 }
 
 nav#toolbox button#eraseMode {
-	background-position:-115px center;
+	background-position:-110px center;
 }
+
+nav#toolbox button#musical {
+	background-position:-148px center;
+}
+
 
 nav#toolbox button:hover {
 	border:solid 2px #bbb;	
