--- a/style.css
+++ b/style.css
@@ -94,6 +94,17 @@ nav#toolbox {
 	margin-bottom:10px;
 }
 
+nav div {
+	display: inline-block;
+	padding:0;
+	margin:0;
+	margin-right:9px;
+	padding-right:9px;
+	border-right:solid 2px #222;
+	height:40px;
+	line-height:40px;
+}
+
 nav#toolbox button {
 	background:url(icons.png) #666 no-repeat 4px center;
 	width:40px;
