--- a/style.css
+++ b/style.css
@@ -120,21 +120,28 @@ nav#toolbox button#lineMode {
 }
 
 nav#toolbox button#CircleCenterMode {
-	background-position: -36px center;
+	background-position: -33px center;
 }
 
 nav#toolbox button#CircleEdgeMode {
-	background-position:-73px center;
+	background-position:-69px center;
 }
 
 nav#toolbox button#eraseMode {
-	background-position:-110px center;
+	background-position:-104px center;
 }
 
 nav#toolbox button#musical {
-	background-position:-148px center;
+	background-position:-140px center;
 }
 
+nav#toolbox button#draw-straight {
+	background-position:-176px center;
+}
+
+nav#toolbox button#draw-curved {
+	background-position:-212px center;
+}
 
 nav#toolbox button:hover {
 	border:solid 2px #bbb;	
