--- a/style.css
+++ b/style.css
@@ -101,7 +101,11 @@ path.selected {
 /* buttons */
 
 nav#toolbox {
-	margin-bottom:10px;
+	float:left;
+	margin:0;
+	margin-left:15px;
+	line-height: 64px;
+	margin-bottom:0px;
 }
 
 nav div {
@@ -123,6 +127,7 @@ nav#toolbox button {
 	border:solid 2px transparent;
 	border-radius:4px;
 	margin-right:5px;
+	vertical-align:top;
 }
 
 nav#toolbox button#lineMode {
@@ -160,4 +165,178 @@ nav#toolbox button:hover {
 nav#toolbox button.active {
 	background-color:#333;
 	border:solid 2px #666;
+}
+
+/* ***************************************** */
+ 
+ 
+header.layout {
+	z-index: 3;
+	position:relative;
+	box-shadow:2px 2px 2px #999;
+}
+
+header.layout nav {
+	background:none;
+	width:auto;
+	box-shadow:none;
+}
+
+#menu {
+	color:white;
+	float:right;
+	font-family:Arial, Helvetica, sans-serif;
+	position: relative;
+	/*padding-bottom:10px;*/
+}
+
+#frame {
+	clear:both;
+	height:calc(100%  - 29px);
+}
+
+#menu li {
+	display:inline-block;
+	margin-right:10px;
+	position:relative;
+	padding-bottom:10px;
+}
+
+#menu li li {
+	display:block;	
+	float:none;
+	clear:both;
+}	
+
+#menu li.hidden {
+	display:none;
+}	
+
+#menu a{
+	color:white;
+	text-decoration:none;	
+}	
+
+
+#account_info nav a {
+	display:block;	
+}
+
+#menu ul ul{
+	display:none;
+	position:absolute;
+	background:#333;
+	border:solid 1px #666;
+	padding:0;
+	margin:0;
+}
+
+#menu li  li {
+	margin:0;	
+	padding:0;
+}	
+
+#account_info nav { 
+	min-width:100px;	
+}	
+
+#menu ul li:hover ul {
+	display: block;
+}
+
+#menu ul ul a {
+	padding: 5px 10px;
+	display:block;	
+	transition:background .2s;
+	min-width:100px;
+	margin:0;
+	line-height:100%;
+}	
+
+#menu ul ul a:hover {
+	background:#666;	
+}	
+
+#login form {
+	padding:0  15px 5px 15px;
+}
+
+form h2 {
+	font-size: 18px;
+	padding:20px 0 0 0;
+	margin:0;
+	color:#1565C0;
+}
+
+.tabs .tab a.active {
+	background:#1565C0;
+	color:white;
+}
+
+.indicator {
+	display:none;
+}
+
+p {
+	margin:0 0 10px;
+}
+
+.error {
+	color:red;
+}
+.success{
+	color:green;
+}
+
+#login form input {
+	border:0;
+	padding:5px;
+	display: block;
+	font-size:16px;	
+	margin-bottom:10px;
+}	
+/*
+#loginPopup form input[type='submit']{
+	background:#0e69b7;
+	width:75px;
+	color:white;
+	border:solid 1px #0f71c5;
+}*/
+
+#fileList a {
+	display:block;
+	padding:5px 0;
+}
+
+#fileList a:hover  {
+	text-decoration:underline;	
+}	
+
+/*clear fix */
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+
+@media print {
+	#frame {
+		background:white;
+		border:0;
+	}
+	
+	#guidecircles .guide, .guideline {
+		stroke: #dddddd;
+	}
+	
+	header.layout {
+		display:none;
+	}
 }
