--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
 	position:relative;
 	height:100%;
+    font-family:lora, 'Titillium Web', sans-serif;
 }
 
 body {
@@ -161,3 +162,115 @@ nav#toolbox button.active {
 	background-color:#333;
 	border:solid 2px #666;
 }
+
+/* Palettes */
+
+.palette {
+    position:absolute;
+    z-index:999;
+    top:0;
+    left:0;
+    background:white;
+    border:solid 1px #666;
+    border-radius:3px;
+    overflow: hidden;
+}    
+
+.palette header {
+    background:#ccc;
+    color:black;
+    padding:5px 10px;
+    font-weight: 600;
+    cursor: move;
+}   
+
+.palette header a {
+    background:none;
+    border:0;
+    position:absolute;
+    right:10px;
+    top:5px;
+    font-size:12px;
+    cursor:default;
+}    
+    
+.palette .layers,
+.palette ul{
+    margin:0;
+    padding:0;
+    list-style: none;
+}    
+
+.palette ul li {
+    display:block;
+    margin:0;
+    padding:5px 10px;
+    border-bottom:solid 1px #999;
+    width:200px;
+}
+
+#guideLayers li{
+    background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQYV2O8efPmf3V1dUYGKIAzMARgKjFUAABhTQgFqUDzYAAAAABJRU5ErkJggg==');
+}
+
+#guideLayers li:hover{
+background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAJUlEQVQYV2NUmfD/f5U9Axwwzjv//z+Cy8AAF2g7yMAAUomhAgBMfg+xx0DOUQAAAABJRU5ErkJggg==');
+    color:black;
+}    
+
+.palette ul li:hover {
+    background:#3b9eff;
+    color:white;
+}    
+    
+.palette footer {
+    background: #eee;
+    padding:5px 10px;
+}   
+
+.palette.ui-draggable-dragging {
+    margin-top:-8px;
+}    
+
+.palette footer button {
+    background:none;
+    border:0;
+    text-align: center;
+    line-height:15px;
+    display:block;
+    position: relative;
+    left:-3px;
+    padding:0;
+    margin-right: 10px;
+    float: left;
+    color:#666;
+}   
+
+.palette footer button:hover {
+    color:#000;
+}   
+
+.palette .selector {
+    display:inline-block;
+    height:10px;
+    width:10px;
+    border:solid 1px #eee;
+    margin-right:10px;
+}
+
+.palette .selector.on {
+    background:#000;
+}
+
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
