--- a/style.css
+++ b/style.css
@@ -135,27 +135,31 @@ nav#toolbox button#lineMode {
 }
 
 nav#toolbox button#CircleCenterMode {
-	background-position: -33px center;
+	background-position: -37px center;
 }
 
 nav#toolbox button#CircleEdgeMode {
-	background-position:-69px center;
+	background-position:-72px center;
 }
 
 nav#toolbox button#eraseMode {
-	background-position:-104px center;
+	background-position:-108px center;
 }
 
 nav#toolbox button#musical {
-	background-position:-140px center;
+	background-position:-143px center;
 }
 
 nav#toolbox button#draw-straight {
-	background-position:-176px center;
+	background-position:-178px center;
 }
 
 nav#toolbox button#draw-curved {
-	background-position:-212px center;
+	background-position:-216px center;
+}
+
+nav#toolbox button#play {
+	background-position:-252px center;
 }
 
 nav#toolbox button:hover {
@@ -165,6 +169,15 @@ nav#toolbox button:hover {
 nav#toolbox button.active {
 	background-color:#333;
 	border:solid 2px #666;
+}
+
+#noteDisplay {
+    color:white;
+    display: inline-block;
+    min-width:55px;
+    font-size:1.25em;
+    line-height: 100%;
+    margin-left:5px;   
 }
 
 /* ***************************************** */
