--- a/style.css
+++ b/style.css
@@ -275,6 +275,31 @@ background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z
     background:#000;
 }
 
+.palette .opener {
+    width:12px;
+    height:12px;
+    display: inline-block;
+    float:right;
+}
+
+.opener span {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 4px 0 4px 8px;
+    border-color: transparent transparent transparent #000000;
+    display: block;
+    position:relative;
+    top:7px;
+}
+
+.opener.open span {
+   width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: #000000 transparent transparent transparent;
+    border-width: 8px 4px 0 4px;
+}
  
 header.layout {
 	z-index: 3;
