--- a/style.css
+++ b/style.css
@@ -215,6 +215,10 @@ nav#toolbox button.active {
     width:200px;
 }
 
+.palette .layerGroup.closed ul{
+    display:none;
+}
+
 .palette li.heading{
     background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQYV2O8efPmf3V1dUYGKIAzMARgKjFUAABhTQgFqUDzYAAAAABJRU5ErkJggg==');
 }
@@ -282,23 +286,22 @@ background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z
     float:right;
 }
 
-.opener span {
+ .opener span {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 4px 0 4px 8px;
-    border-color: transparent transparent transparent #000000;
+    
     display: block;
     position:relative;
     top:7px;
-}
-
-.opener.open span {
-   width: 0;
-    height: 0;
     border-style: solid;
     border-color: #000000 transparent transparent transparent;
     border-width: 8px 4px 0 4px;
+}
+
+ .opener.closed span {
+  border-width: 4px 0 4px 8px;
+    border-color: transparent transparent transparent #000000;
 }
  
 header.layout {
